mobile menu fix + remove modal overlay blur on ios

--- a/frontend/src/components/Modals/ModalOverlay/ModalOverlay.module.scss
+++ b/frontend/src/components/Modals/ModalOverlay/ModalOverlay.module.scss
@@ -1,66 +1,69 @@
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    z-index: 1000;
-    opacity: 0;
-    @include fadeIn();
-    @include lightBlurBackground();
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  z-index: 1000;
+  opacity: 0;
+  @include fadeIn();
+  @include lightBlurBackground();
 
-    &.open {
-      opacity: 1;
-    }
+  &.open {
+    opacity: 1;
+  }
 
-    &.closing {
-      @include fadeOut();
-    }
+  &.closing {
+    @include fadeOut();
+  }
 }
 
 .top {
-    padding: 10vh 4vh 4vh;
-    .content {
-        width: 100%;
-        height: 100%;
-    }
+  padding: 10vh 4vh 4vh;
+  .content {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .right {
-    padding-bottom: 30px;
-    justify-content: flex-end;
+  padding-bottom: 30px;
+  justify-content: flex-end;
 }
 
 .content {
-    @include fadeInMoveFromTop();
+  @include fadeInMoveFromTop();
 
-    &.closing {
-        @include fadeOutMoveToTop();
-    }
+  &.closing {
+    @include fadeOutMoveToTop();
+  }
 }
 
 @media (max-width: $mobile-breakpoint) {
-    .overlay {
-        padding: 10px 10px 90px;
-        justify-content: center;
+  .overlay {
+    padding: 10px 10px 90px;
+    justify-content: center;
+    @supports (-webkit-overflow-scrolling: touch) {
+      background-color: unset;
+      backdrop-filter: unset;
     }
+  }
 
-    .top, .right {
-        .content {
-            width: 100%;
-            height: 100%;
-        }
+  .top,
+  .right {
+    .content {
+      width: 100%;
+      height: 100%;
     }
+  }
 
-    .top {
-        padding: 10px 10px 90px;
-        .content {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+  .top {
+    padding: 10px 10px 90px;
+    .content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
+  }
 }
-
-
